--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,4 +1,3 @@
----
 version: v1.0
 name: Validate and Deploy Pipeline
 agent:
@@ -6,35 +5,58 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Validate with Maven
+  - name: "Validate with Maven"
+    dependencies: []
     task:
       jobs:
-        - name: Run mvn install
+        - name: "Run mvn install"
           commands:
             - checkout
             - cache restore
-            - sem-version java 21
+            - |
+              # Install Java 21
+              wget -O- https://apt.corretto.aws/corretto.key | sudo apt-key add -
+              sudo add-apt-repository 'deb https://apt.corretto.aws stable main'
+              sudo apt-get update
+              sudo apt-get install -y java-21-amazon-corretto-jdk
+              export JAVA_HOME=/usr/lib/jvm/java-21-amazon-corretto
+              export PATH=$JAVA_HOME/bin:$PATH
+              java -version
             - mvn clean install -DskipTests=false -Denforcer.skip=true
             - cache store
-  - name: Trigger Drone Deployment
+            
+  - name: "Trigger Drone Deployment"
     dependencies:
-      - Validate with Maven
+      - "Validate with Maven"
     task:
+      secrets:
+        - name: DRONE_TOKEN
+        - name: DRONE_SERVER
       jobs:
-        - name: Send CLI Command
+        - name: "Trigger Drone"
           commands:
-            - echo "Installing Drone CLI..."
-            - wget -q
-              https://github.com/harness/drone-cli/releases/latest/download/drone_linux_amd64.tar.gz
-            - tar zxf drone_linux_amd64.tar.gz
-            - sudo install drone /usr/local/bin/
-            - echo "Triggering Drone build for ${SEMAPHORE_GIT_REPO_SLUG} on
-              branch main..."
-            - drone build start ${SEMAPHORE_GIT_REPO_SLUG} main
-              --server=${DRONE_SERVER} --token=${DRONE_TOKEN}
-          secrets:
-            - name: DRONE_TOKEN
-            - name: DRONE_SERVER
-          when:
-            branch: main
-
+            - |
+              if [ "$SEMAPHORE_GIT_BRANCH" = "main" ]; then
+                echo "Triggering Drone build for ${SEMAPHORE_GIT_REPO_SLUG}..."
+                
+                # استخدام Drone API مباشرة
+                RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+                  -H "Authorization: Bearer ${DRONE_TOKEN}" \
+                  "${DRONE_SERVER}/api/repos/${SEMAPHORE_GIT_REPO_SLUG}/builds" \
+                  -H "Content-Type: application/json" \
+                  -d "{\"branch\":\"main\"}")
+                
+                HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+                BODY=$(echo "$RESPONSE" | head -n-1)
+                
+                if [ "$HTTP_CODE" -eq 200 ] || [ "$HTTP_CODE" -eq 201 ]; then
+                  echo "✅ Drone build triggered successfully!"
+                  echo "$BODY"
+                else
+                  echo "❌ Failed to trigger Drone build. HTTP Code: $HTTP_CODE"
+                  echo "$BODY"
+                  exit 1
+                fi
+              else
+                echo "⏭️  Skipping Drone trigger - not on main branch"
+              fi
