fix: Disable Drone auto-trigger, only run via Semaphore API

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,13 +2,52 @@ kind: pipeline
 type: docker
 name: build-and-push-from-ci
 
-# No DinD service - we'll use the host's Docker directly
+services:
+  - name: docker
+    image: docker:27-dind
+    privileged: true
+    environment:
+      DOCKER_TLS_CERTDIR: ""
+    volumes:
+      - name: dockersock
+        path: /var/run
+
+volumes:
+  - name: dockersock
+    temp: {}
+
 steps:
+  - name: wait-for-docker
+    image: docker:27-cli
+    volumes:
+      - name: dockersock
+        path: /var/run
+    commands:
+      - |
+        echo "🔍 Waiting for Docker daemon to start..."
+        
+        for i in $(seq 1 60); do
+          if docker -H unix:///var/run/docker.sock info >/dev/null 2>&1; then
+            echo "✅ Docker daemon is ready!"
+            echo ""
+            docker version
+            exit 0
+          fi
+          
+          if [ $((i % 5)) -eq 0 ]; then
+            echo "⏳ Still waiting... (attempt $i/60)"
+          fi
+          sleep 1
+        done
+        
+        echo "❌ ERROR: Docker daemon failed to start"
+        exit 1
+
   - name: build_and_push_to_dockerhub
     image: docker:27-cli
     volumes:
       - name: dockersock
-        path: /var/run/docker.sock
+        path: /var/run
     environment:
       DOCKER_USERNAME:
         from_secret: docker_username
@@ -16,29 +55,25 @@ steps:
         from_secret: docker_password
     commands:
       - |
-        echo "🔍 Checking Docker connection..."
-        docker version
-        echo ""
-        
         echo "🔐 Logging into Docker Hub..."
         echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        echo ""
         
+        echo ""
         echo "🏗️  Building Docker image..."
         docker build -t mohamedelgarhy/spring-petclinic:latest .
-        echo ""
         
+        echo ""
         echo "🏷️  Tagging images..."
         docker tag mohamedelgarhy/spring-petclinic:latest mohamedelgarhy/spring-petclinic:${DRONE_COMMIT_SHA:0:8}
         docker tag mohamedelgarhy/spring-petclinic:latest mohamedelgarhy/spring-petclinic:${DRONE_BUILD_NUMBER}
-        echo ""
         
+        echo ""
         echo "📤 Pushing images to Docker Hub..."
         docker push mohamedelgarhy/spring-petclinic:latest
         docker push mohamedelgarhy/spring-petclinic:${DRONE_COMMIT_SHA:0:8}
         docker push mohamedelgarhy/spring-petclinic:${DRONE_BUILD_NUMBER}
-        echo ""
         
+        echo ""
         echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         echo "🎉 Build and push completed successfully!"
         echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
@@ -47,14 +82,15 @@ steps:
         echo "   - mohamedelgarhy/spring-petclinic:${DRONE_COMMIT_SHA:0:8}"
         echo "   - mohamedelgarhy/spring-petclinic:${DRONE_BUILD_NUMBER}"
 
-volumes:
-  - name: dockersock
-    host:
-      path: /var/run/docker.sock
-
+# 🔒 CRITICAL: Disable automatic Git triggers!
+# Drone will ONLY run when Semaphore calls the API
 trigger:
-  branch:
-    - main
   event:
-    - push
-    - tag
+    # Exclude ALL automatic triggers
+    exclude:
+      - push
+      - pull_request
+      - tag
+      - promote
+      - rollback
+      - cron
